# MC-World-MCP

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
src/mc_world_mcp/: __init__.py  _preview_accel.c  _preview_accel.cp311-win_amd64.pyd  _preview_accel.pyx  anvil.py  assistant_guidance.py  compat.py  config.py  datapacks.py  item_preview.py  nbt_io.py  paths.py  preview.py  safety.py  server.py  source_worlds.py  templates.py  world_ops.py  worldgen.py
tests/: test_core.py
